--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "dev": "nodemon ./src/server.js --ignore-watch ./node_modules"
   },
   "author": "",
