--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
