--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "",
+    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js --ignore-watch ./node_modules"
   },
   "author": "",
